--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-
 *.pyc
-*.pyc
-*.pyc
-*.pyc
-*.avi
 *.avi
 *.png
 *.txt
 *.whl
+*.npy
+*.csv
+GUI_Code/__pycache__/VideoCapture.cpython-37.pyc
+*.pyc
